# bazel-proto

./: .bazelrc  .dockerignore  .gitignore  CMakeLists.txt  MODULE.bazel  README.md  WORKSPACE
.github/workflows/: amd64_docker_bazel.yml  amd64_docker_cmake.yml  amd64_linux_bazel.yml  amd64_linux_cmake.yml  amd64_macos_bazel.yml  amd64_macos_cmake.yml  amd64_windows_bazel.yml  amd64_windows_cmake.yml  arm64_macos_bazel.yml
Bar/: BUILD.bazel  CMakeLists.txt  bar.proto
Bar/include/bar/: Bar.hpp
Foo/: A.proto  BUILD.bazel  C.proto  CMakeLists.txt
Foo/include/foo/: Foo.hpp
Foo/src/: Foo.cpp
Foo/tests/: foo_test.cpp
FooBar/include/foobar/: FooBar.hpp
FooBar/src/: FooBar.cpp
FooBarApp/src/: main.cpp
app/: BUILD.bazel  CMakeLists.txt  main.cc
bar/: BUILD.bazel  CMakeLists.txt  bar.cc  bar.h  bar.proto  bar_test.cc
bazel/: Makefile  README.md
bazel/docker/almalinux/: Dockerfile
bazel/docker/alpine/: Dockerfile
bazel/docker/archlinux/: Dockerfile
bazel/docker/centos/: Dockerfile
bazel/docker/debian/: Dockerfile
bazel/docker/fedora/: Dockerfile
bazel/docker/opensuse/: Dockerfile
bazel/docker/rockylinux/: Dockerfile
bazel/docker/ubuntu/: Dockerfile
cmake/: BazelProtoConfig.cmake.in  Makefile  README.md  check_deps.cmake  cpp.cmake  deps.cmake  host.CMakeLists.txt  host.cmake  system_deps.cmake
cmake/dependencies/: CMakeLists.txt
cmake/docker/almalinux/: Dockerfile
cmake/docker/alpine/: Dockerfile
cmake/docker/archlinux/: Dockerfile
cmake/docker/centos/: Dockerfile
cmake/docker/debian/: Dockerfile
cmake/docker/fedora/: Dockerfile
cmake/docker/opensuse/: Dockerfile
cmake/docker/rockylinux/: Dockerfile
cmake/docker/ubuntu/: Dockerfile
cmake/docs/: deps.dot  docker.dot
cmake/samples/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt
foo/: B.proto  BUILD.bazel  C.proto  CMakeLists.txt  foo.cc  foo.h  foo_test.cc
foobar/: BUILD.bazel  CMakeLists.txt  foobar.cc  foobar.h
patches/: BUILD.bazel  abseil-cpp-20230125.0.patch  abseil-cpp-20260107.1.patch  protobuf-v21.12.patch  protobuf-v27.2.patch  protobuf-v28.patch
tools/: cross_compile.sh
