#load("@bazel_skylib//rules:copy_file.bzl", "copy_file")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_cc//cc:defs.bzl", "cc_library", "cc_proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "bar_proto",
    srcs = ["bar.proto"],
    deps = [],
)

cc_proto_library(
    name = "bar_cc_proto",
    deps = [":bar_proto"],
)

cc_library(
  name = "bar",
  srcs = ["src/Bar.cpp"],
  hdrs = ["include/bar/Bar.hpp"],
  strip_include_prefix = "include",
  visibility = ["//visibility:public"],
  deps = [
    #"@com_google_googletest//:gtest_main",
    #"@com_google_absl//absl/base",
    ":bar_cc_proto",
  ],
)

cc_test(
  name = "bar-test",
  srcs = ["tests/bar_test.cpp"],
  deps = [
    "@com_google_googletest//:gtest_main",
    ":bar",
  ],
)
