load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_binary(
  name = "app",
  srcs = ["main.cc"],
  deps = [
    "//foobar:foobar",
    "@com_google_absl//absl/strings",
  ],
)

cc_test(
  name = "app_test",
  size = "small",
  srcs = ["main.cc"],
  deps = [
    ":app",
    "//foobar:foobar",
    "@com_google_absl//absl/strings",
  ],
)
