#load("@bazel_skylib//rules:copy_file.bzl", "copy_file")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_cc//cc:defs.bzl", "cc_library", "cc_proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "bar_proto",
    srcs = ["bar.proto"],
    deps = [],
)

cc_proto_library(
    name = "bar_cc_proto",
    deps = [":bar_proto"],
)

cc_library(
  name = "bar",
  srcs = ["bar.cc"],
  hdrs = ["bar.h"],
  visibility = ["//visibility:public"],
  deps = [
    ":bar_cc_proto",
  ],
)

cc_test(
  name = "bar_test",
  srcs = ["bar_test.cc"],
  deps = [
    "@com_google_googletest//:gtest_main",
    ":bar",
  ],
)
